--- a/demo/src/main/resources/templates/users/login.html
+++ b/demo/src/main/resources/templates/users/login.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table{border: 1px solid black}
+        table tr {border: 1px solid black}
+        table tr td {border: 1px solid black}
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <h1>로그인</h1>
-    <form action="">
+    <form>
         <table>
             <tr>
                 <td>ID</td>
@@ -21,31 +26,35 @@
             <tr>
                 <td colspan="2">
                     <button id="login-btn">로그인</button>
-                    <button id="search-btn">아이디/비밀번호 찾기</button>
                 </td>
             </tr>
         </table>
     </form>
     <script>
-        document.getElementById('login-btn').addEventListener('click', e => {
-            e.defaultPrevented()
+        document.getElementById('login-btn')
+        .addEventListener('click', e => {
+            e.preventDefault()
             alert('로그인 클릭')
             $.ajax({
-                url:'/users',
+                url:'/users/login',
                 type:'POST',
-                data:JSON.stringify({userid:document.getElementById(userid).value,
-                                     password:document.getElementById(password).value}),
+                data:JSON.stringify({
+                    userid:document.getElementById('userid').value,
+                    password:document.getElementById('password').value
+                }),
                 dataType:'json',
-                contentType:'Application/json',
+                contentType:'application/json',
                 success: d => {
-                    if(d.userid === null){
-                        alert('로그인 실패')
+                    if(d.name !== 'FAILURE'){
+                        alert(`${d.name} 로그인 성공`)
                     }else{
-                        alert(`{$d.userid}님 로그인 성공`)
+                        alert('로그인 실패')
+                        userid:document.getElementById('userid').value=''
+                        password:document.getElementById('password').value=''
                     }
                 },
                 error: e => {
-                    alert(`%{e}를 이유로 로그인 실패`)
+                    alert(`${e}를 이유로 로그인 실패`)
                 }
             })
         })
