--- a/src/main/resources/templates/users/join.html
+++ b/src/main/resources/templates/users/join.html
@@ -55,9 +55,9 @@
                 contentType:'application/json',
                 success: d =>{
                     if(d.message === 'SUCCESS'){
-                        alert('SUCCESS')
+                        location.href = '/move/users/login'
                     }else{
-                        alert(`FAILURE`)
+                        location.href = '/move/users/join'
                     }
                 },
                 error: e =>{
