--- a/src/main/resources/templates/users/update.html
+++ b/src/main/resources/templates/users/update.html
@@ -8,6 +8,56 @@
 </head>
 <body>
     <h1> Update </h1>
-    
+    <a id="home" href="#">홈으로</a>
+    <form>
+    <table>
+        <tr>
+            <td>ID</td>
+            <td><span id="userid"></span></td>
+        </tr>
+        <tr>
+            <td>NEW PW</td>
+            <td>
+                <input  id="password" type="text">
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <button id="confirm">확 인</button>
+            </td>
+        </tr>
+    </table>
+</form>
+    <script>
+        document.getElementById('home')
+        .addEventListener('click', e=>{
+        location.href = '/'
+        })
+        document.getElementById('userid').innerHTML = sessionStorage.getItem('loginUserid')
+        document.getElementById('confirm')
+        .addEventListener('click', e=>{
+            alert(`수정하려는 ID: ${document.getElementById('userid').innerText}, PW: ${document.getElementById('password').value}`)
+            $.ajax({
+                url:'/users',
+                type:'PUT',
+                data:JSON.stringify({
+                    userid: document.getElementById('userid').innerText,
+                    password: document.getElementById('password').value
+                }),
+                dataType: 'json',
+                contentType: 'application/json',
+                success: d =>{
+                    if(d.message === 'SUCCESS'){
+                    location.href = '/move/users/mypage'   
+                    }else{
+                        location.href = '/move/users/uqdate'
+                    }
+                },
+                error: e =>{
+                    alert(`${e} 비밀번호 수정 실패`)
+                }
+            })
+        })
+    </script>
 </body>
 </html>
